# gwp.zeitplan

./: Cargo.toml  index.html
src/: main.rs  repository.rs
src/component/: header.rs
src/model/: bitrix_user.rs  callgear_employee.rs  employee.rs  employees_result.rs  mod.rs
src/page/: mod.rs  preview.rs  test.rs  widget.rs
styles/: styles.css
