[package]
name = "zeitplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5.0"
serde_json = "1.0.81"
wasm-bindgen-futures = "0.4.30"
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.19"
js-sys = "0.3"
web-sys = "0.3.58"
serde_with = "3.0.0"
wasm-bindgen = "0.2.87"
gloo = "0.8.0"
wasm-logger = "0.2.0"
yew-router = "0.17.0"
static_assertions = "1.1"
serde_qs = "0.12.0"
serde_derive = "1.0.166"